# ReleaseMe

./: README.md  pyproject.toml
.github/workflows/: git-tag_to_pypi.yml
releaseme/: __init__.py  _cli.py  cli.py  git-tag_to_pypi.yml
