[project]
name = "releaseme"
version = "0.1.0"
description = "CLI tool for creating git-tagged versions of Python packages where the version has to be specified exactly once."
authors = [{name = "Thomas Bauwens", email = "thomas.bauwens@kuleuven.be"}]
dependencies = []

[project.scripts]
release-version = "releaseme.cli:_main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
